force-app/main/default/objects/LicenseStateRule__mdt/LicenseStateRule__mdt.object-meta.xml
<CustomObject>
    <description>Standardizes entitlement resolution</description>
    <label>License State Rule</label>
    <pluralLabel>LicenseStateRule</pluralLabel>
</CustomObject>