force-app/main/default/objects/LicenseStateRule__mdt/fields/AllowsSync__c.field-meta.xml
<CustomField>
    <fullName>AllowsSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Sync</label>
    <type>Checkbox</type>
</CustomField>