force-app/main/default/objects/LicenseStateRule__mdt/fields/AllowsUsage__c.field-meta.xml
<CustomField>
    <fullName>AllowsUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Usage</label>
    <type>Checkbox</type>
</CustomField>