force-app/main/default/objects/LicenseStateRule__mdt/fields/LicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>LicenseStatus__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE,</fullName>
            </value>
            <value>
                <fullName>INACTIVE,</fullName>
            </value>
            <value>
                <fullName>FAILED,</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>