force-app/main/default/objects/LicenseStateRule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info,</fullName>
            </value>
            <value>
                <fullName>Warn,</fullName>
            </value>
            <value>
                <fullName>Error,</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>